# ml_interview_problems

linear_regression/: CMakeLists.txt  main.cpp
lqr/: CMakeLists.txt  main.cpp
